--- a/HW.ipynb
+++ b/HW.ipynb
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2213,9 +2213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_test shape is  (437, 76)\n",
+      "validation shape is  (100, 76)\n",
+      "X_train_test shape is  (437, 75)\n",
+      "Y_train_test shape is  (437,)\n",
+      "X_validation shape is  (100, 75)\n",
+      "Y_validation shape is  (100,)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -2228,8 +2241,7 @@
     "\n",
     "X_train_test = train_test.iloc[:, :-1].values\n",
     "Y_train_test = train_test.iloc[:,-1].values\n",
-    "X_train_test = pd.DataFrame(X_train_test)\n",
-    "Y_train_test = pd.DataFrame(Y_train_test)\n",
+    "\n",
     "                   \n",
     "print('X_train_test shape is ' , X_train_test.shape)\n",
     "print('Y_train_test shape is ' , Y_train_test.shape)\n",
@@ -2237,8 +2249,7 @@
     "\n",
     "X_validation = validation.iloc[:, :-1].values\n",
     "Y_validation = validation.iloc[:,-1].values\n",
-    "X_validation = pd.DataFrame(X_validation)\n",
-    "Y_validation = pd.DataFrame(Y_validation)\n",
+    "\n",
     "                   \n",
     "print('X_validation shape is ' , X_validation.shape)\n",
     "print('Y_validation shape is ' , Y_validation.shape)\n",
@@ -2247,9 +2258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_test shape is  (437, 75)\n",
+      "Y_train_test shape is  (437,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Cleaning data\n",
     "\n",
@@ -2270,9 +2290,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.00000000e+00 1.00000000e+00 1.99600000e+03 ... 0.00000000e+00\n",
+      "  2.00000000e+00 2.80000000e+01]\n",
+      " [0.00000000e+00 1.00000000e+00 1.99700000e+03 ... 2.00000000e+00\n",
+      "  4.78625954e+00 1.05000000e+01]\n",
+      " [0.00000000e+00 1.00000000e+00 1.99800000e+03 ... 2.00000000e+00\n",
+      "  4.78625954e+00 2.45000000e+01]\n",
+      " ...\n",
+      " [0.00000000e+00 1.00000000e+00 1.99400000e+03 ... 2.00000000e+00\n",
+      "  4.78625954e+00 2.25000000e+01]\n",
+      " [0.00000000e+00 1.00000000e+00 1.99400000e+03 ... 2.00000000e+00\n",
+      "  4.78625954e+00 2.40000000e+01]\n",
+      " [0.00000000e+00 1.00000000e+00 1.99300000e+03 ... 2.00000000e+00\n",
+      "  4.78625954e+00 1.20000000e+01]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X_train_test)"
    ]
@@ -2286,9 +2326,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape is  (327, 75)\n",
+      "X_test shape is  (110, 75)\n",
+      "Y_train shape is  (327,)\n",
+      "Y_test shape is  (110,)\n",
+      "X_validation  shape is  (100, 75)\n",
+      "Y_validation shape is  (100,)\n"
+     ]
+    }
+   ],
    "source": [
     "#dataset.dropna(inplace=True)\n",
     "\n",
@@ -2316,9 +2369,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BernoulliNBModel Train Score is :  0.691131498470948\n",
+      "BernoulliNBModel Test Score is :  0.6090909090909091\n",
+      "----------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "#print (BernoulliNBModel)\n",
     "\n",
@@ -2334,9 +2397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive-Bayes accuracy :  0.65\n"
+     ]
+    }
+   ],
    "source": [
     "pred =BernoulliNBModel.fit(X_train, Y_train).predict(X_validation)\n",
     "#print(pred.tolist())\n",
@@ -2346,9 +2417,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 864x720 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Using Pearson Correlation\n",
     "plt.figure(figsize=(12,10))\n",
