--- a/HW.ipynb
+++ b/HW.ipynb
@@ -2253,6 +2253,7 @@
     "                   \n",
     "print('X_validation shape is ' , X_validation.shape)\n",
     "print('Y_validation shape is ' , Y_validation.shape)\n",
+    "\n",
     "\n"
    ]
   },
@@ -2343,18 +2344,12 @@
     }
    ],
    "source": [
-    "#dataset.dropna(inplace=True)\n",
     "\n",
-    "\n",
-    "#----------------------------------------------------\n",
     "#Splitting data\n",
-    "#X_train, X_test, Y_train, Y_test = train_test_split(X, Y)\n",
+    "\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X_train_test, Y_train_test)\n",
     "\n",
-    "#X_train, X_val, Y_train, Y_val  = train_test_split(X_train, validation)\n",
-    "\n",
-    "#,test_size = 0.3, random_state=12345\n",
     "\n",
     "#Splitted Data\n",
     "print('X_train shape is ' , X_train.shape)\n",
@@ -2363,8 +2358,7 @@
     "print('Y_test shape is ' , Y_test.shape)\n",
     "print('X_validation  shape is ' , X_validation.shape)\n",
     "print('Y_validation shape is ' , Y_validation .shape)\n",
-    "\n",
-    "#print(len(X_train), len(X_test), len(Y_train), len(Y_test))\n"
+    "\n"
    ]
   },
   {
@@ -2376,23 +2370,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BernoulliNBModel Train Score is :  0.691131498470948\n",
-      "BernoulliNBModel Test Score is :  0.6090909090909091\n",
-      "----------------------------------------------------\n"
+      "BernoulliNBModel Train Score is :  0.7247706422018348\n",
+      "BernoulliNBModel Test Score is :  0.6272727272727273\n"
      ]
     }
    ],
    "source": [
     "#print (BernoulliNBModel)\n",
     "\n",
-    "BernoulliNBModel = BernoulliNB(alpha=4.3,binarize=1.0)\n",
+    "BernoulliNBModel = BernoulliNB(alpha=4.3,fit_prior=True)\n",
     "#BernoulliNB(alpha=1.0, binarize=0.0, fit_prior=True)\n",
     "BernoulliNBModel.fit(X_train, Y_train)\n",
     "\n",
     "#Calculating Details\n",
     "print('BernoulliNBModel Train Score is : ' , BernoulliNBModel.score(X_train, Y_train))\n",
-    "print('BernoulliNBModel Test Score is : ' , BernoulliNBModel.score(X_test, Y_test))\n",
-    "print('----------------------------------------------------')"
+    "print('BernoulliNBModel Test Score is : ' , BernoulliNBModel.score(X_test, Y_test))\n"
    ]
   },
   {
@@ -2404,39 +2396,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive-Bayes accuracy :  0.65\n"
+      "[1.0, 1.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 1.0, 1.0, 0.0, 1.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 0.0]\n",
+      "Naive-Bayes accuracy :  0.7\n"
      ]
     }
    ],
    "source": [
     "pred =BernoulliNBModel.fit(X_train, Y_train).predict(X_validation)\n",
-    "#print(pred.tolist())\n",
+    "print(pred.tolist())\n",
     "#print the accuracy score of the model\n",
     "print(\"Naive-Bayes accuracy : \",accuracy_score(Y_validation , pred, normalize = True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 864x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#Using Pearson Correlation\n",
-    "plt.figure(figsize=(12,10))\n",
-    "cor = dataset.corr()\n",
-    "#sns.heatmap(cor, annot=True, cmap=plt.cm.Reds)\n",
-    "plt.show()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
