Update Naive Bayesian Network model class (BernoulliNB)..ipynb

--- a/Naive Bayesian Network model class (BernoulliNB)..ipynb
+++ b/Naive Bayesian Network model class (BernoulliNB)..ipynb
@@ -1732,7 +1732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, we reach to implement the BernoulliNB model for our 3 cases:"
+    "### Now, we reach to implement the BernoulliNB model for our 2 cases:"
    ]
   },
   {
@@ -1785,7 +1785,7 @@
     }
    ],
    "source": [
-    "print ('MTSucceed only')\n",
+    "print ('MTSucceed ')\n",
     "\n",
     "MTSucceedpred =BernoulliNBModel.fit(X_train_MTSucceed, Y_train_MTSucceed).predict(X_validation_MTSucceed)\n",
     "#print(pred.tolist())\n",
@@ -1849,7 +1849,7 @@
     }
    ],
    "source": [
-    "print ('MTSucceed only')\n",
+    "print ('MTSucceed ')\n",
     "\n",
     "MTTotalScorepred =BernoulliNBModel.fit(X_train_MTTotalScore, Y_train_MTTotalScore).predict(X_validation_MTTotalScore)\n",
     "#print(pred.tolist())\n",
