Update Naive Bayesian Network model class (BernoulliNB)..ipynb

--- a/Naive Bayesian Network model class (BernoulliNB)..ipynb
+++ b/Naive Bayesian Network model class (BernoulliNB)..ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The task is the prediction of the results of the midterms: MTTotalScore (numbers) and MTSucceed( 0 and 1). This done by scikit-learn and working on  Naive Bayesian Network model class (BernoulliNB).\n",
+    "# The task is the prediction of the results of the midterms: MTTotalScore (numbers) and MTSucceed( 0 and 1). This done by scikit-learn and working fdon  Naive Bayesian Network model class (BernoulliNB).\n",
     "\n",
     "# There are 2 cases of target of the model: \n",
     "# 1. MTSucceed .\n",
@@ -3102,13 +3102,13 @@
     "\n",
     "#plt.plot(index, MTSucceed, label = \"MTSucceed\") \n",
     "plt.scatter(xindex, MTSucceed, label= \"MTSucceed\", color= \"green\",  \n",
-    "            marker= \"*\", s=30)\n",
+    "            marker= \"D\", s=30)\n",
     "\n",
     "#plt.plot(index, MTSucceedpred, label = \"MTSucceedpred\") \n",
     "\n",
     "\n",
     "plt.scatter(xindex, MTSucceedpred, label= \"MTSucceedpred\", color= \"red\",  \n",
-    "            marker= \"*\", s=30)\n",
+    "            marker= \"x\", s=30)\n",
     "plt.title('MTSucceed VS MTSucceedpred')\n",
     "\n",
     "plt.legend() \n",
